Semi-habilitado login y registro.

--- a/webMetics/Views/Login/CrearUsuario.cshtml
+++ b/webMetics/Views/Login/CrearUsuario.cshtml
@@ -35,79 +35,34 @@
             <div class="row mb-1">
                 <div class="col">
                     <div class="container">
-                        <div class="form-group">
-                            @Html.LabelFor(usuarioModel => usuarioModel.participante.nombre, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.TextBoxFor(usuarioModel => usuarioModel.participante.nombre, new { @class = "form-control", @maxlength = "80", @autocomplete = "off" })
-                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.participante.nombre, "", new { @class = "text-danger" })
-                        </div>
                         <div class="row mt-1">
-                            <div class="col">
-                                @Html.LabelFor(usuarioModel => usuarioModel.participante.apellido_1, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                                @Html.TextBoxFor(usuarioModel => usuarioModel.participante.apellido_1, new { @class = "form-control", @maxlength = "80", @autocomplete = "off" })
-                                @Html.ValidationMessageFor(usuarioModel => usuarioModel.participante.apellido_1, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col">
-                                @Html.LabelFor(usuarioModel => usuarioModel.participante.apellido_2, new { Style = "font-size:22px" })
-                                @Html.TextBoxFor(usuarioModel => usuarioModel.participante.apellido_2, new { @class = "form-control", @maxlength = "80", @autocomplete = "off" })
-                                @Html.ValidationMessageFor(usuarioModel => usuarioModel.participante.apellido_2, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            @Html.LabelFor(usuarioModel => usuarioModel.participante.correo, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.TextBoxFor(usuarioModel => usuarioModel.participante.correo, new { @class = "form-control", @maxlength = "80", @autocomplete = "off" })
-                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.participante.correo, "", new { @class = "text-danger" })
-                        </div>
-                        <div class="row mt-1">
-                            <div class="col">
-                                @Html.LabelFor(usuarioModel => usuarioModel.participante.tipoIdentificacion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                                @Html.DropDownListFor(usuarioModel => usuarioModel.participante.tipoIdentificacion, new SelectList(Enum.GetValues(typeof(webMetics.Models.TipoIdentificacion))), "Seleccione su tipo de identificación...", new { @class = "form-control" })
-                                @Html.ValidationMessageFor(usuarioModel => usuarioModel.participante.tipoIdentificacion, "", new { @class = "text-danger" })
-                            </div>
                             <div class="col">
                                 @Html.LabelFor(usuarioModel => usuarioModel.identificacion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
                                 @Html.TextBoxFor(usuarioModel => usuarioModel.identificacion, new { @class = "form-control", @maxlength = "15", @autocomplete = "off" })
                                 @Html.ValidationMessageFor(usuarioModel => usuarioModel.identificacion, "", new { @class = "text-danger" })
                             </div>
+                            <div class="col">
+                                @Html.LabelFor(usuarioModel => usuarioModel.correo, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                                @Html.TextBoxFor(usuarioModel => usuarioModel.correo, new { @class = "form-control", @maxlength = "15", @autocomplete = "off" })
+                                @Html.ValidationMessageFor(usuarioModel => usuarioModel.correo, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(usuarioModel => usuarioModel.participante.tipoParticipante, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(usuarioModel => usuarioModel.participante.tipoParticipante, new SelectList(Enum.GetValues(typeof(webMetics.Models.TipoDeParticipantes))), "Seleccione un tipo de participante...", new { @class = "form-control" })
-                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.participante.tipoParticipante, "", new { @class = "text-danger" })
-                        </div>
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(usuarioModel => usuarioModel.participante.unidadAcademica, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.TextBoxFor(usuarioModel => usuarioModel.participante.unidadAcademica, new { @class = "form-control", @maxlength = "80", @autocomplete = "off" })
-                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.participante.unidadAcademica, "", new { @class = "text-danger" })
-                        </div>
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(usuarioModel => usuarioModel.participante.area, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(usuarioModel => usuarioModel.participante.area, new SelectList(ViewData["jsonDataAreas"] as List<string>), "Seleccione un área...", new { @class = "form-control", id = "areaDropdown" })
-                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.participante.area, "", new { @class = "text-danger" })
-                        </div>
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(usuarioModel => usuarioModel.participante.departamento, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(usuarioModel => usuarioModel.participante.departamento, new SelectList(Enumerable.Empty<SelectListItem>()), "Seleccione un departamento...", new { @class = "form-control", id = "departamentoDropdown" })
-                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.participante.departamento, "", new { @class = "text-danger" })
-                        </div>
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(usuarioModel => usuarioModel.participante.seccion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(usuarioModel => usuarioModel.participante.seccion, new SelectList(Enumerable.Empty<SelectListItem>()), "Seleccione una sección...", new { @class = "form-control", id = "seccionDropdown" })
-                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.participante.seccion, "", new { @class = "text-danger" })
-                        </div>
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(usuarioModel => usuarioModel.participante.telefonos, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.TextBoxFor(usuarioModel => usuarioModel.participante.telefonos, new { @class = "form-control", @maxlength = "12", @minlength = "7", @autocomplete = "off" })
-                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.participante.telefonos, "", new { @class = "text-danger" })
-                        </div>
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(usuarioModel => usuarioModel.participante.condicion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.TextBoxFor(usuarioModel => usuarioModel.participante.condicion, new { @class = "form-control", @maxlength = "30", @autocomplete = "off" })
-                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.participante.condicion, "", new { @class = "text-danger" })
+                        <div class="row mt-1">
+                            <div class="col">
+                                @Html.LabelFor(usuarioModel => usuarioModel.contrasena, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                                @Html.PasswordFor(usuarioModel => usuarioModel.contrasena, new { @class = "form-control", @maxlength = "15", @autocomplete = "off" })
+                                @Html.ValidationMessageFor(usuarioModel => usuarioModel.contrasena, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="col">
+                                @Html.LabelFor(usuarioModel => usuarioModel.contrasena, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                                @Html.PasswordFor(usuarioModel => usuarioModel.contrasena, new { @class = "form-control", @maxlength = "15", @autocomplete = "off" })
+                                @Html.ValidationMessageFor(usuarioModel => usuarioModel.contrasena, "", new { @class = "text-danger" })
+                            </div>
                         </div>
                     </div>
                     <div class="row justify-content-center m-4">
                         @Html.ActionLink("Cancelar", "../Home/Index", new { }, new { @class = "btn boton-formularios", @style = "background-color:grey" })
-                        <input type="submit" class="btn btn-primary boton-formularios" value="Guardar" />
+                        <input type="submit" class="btn btn-primary boton-formularios" value="Guardar"></input>
                     </div>
                 </div>
             </div>
