--- a/webMetics/Views/Login/Login.cshtml
+++ b/webMetics/Views/Login/Login.cshtml
@@ -48,7 +48,7 @@
                                     </div>
                                 }
 
-                                <input type="submit" class="btn btn-primary" value="Acceder" style="margin-top:40px" />
+                                <input type="submit" class="btn btn-primary" value="Acceder" style="margin-top:40px"></input>
                             }
                             <div class="mt-2">
                                 ¿No tiene un usuario?
