--- a/webMetics/Views/Login/ParticipanteRegistrado.cshtml
+++ b/webMetics/Views/Login/ParticipanteRegistrado.cshtml
@@ -8,9 +8,9 @@
         </div>
         <div class="card-body ">
             <h5> @ViewBag.Message</h5>
-            @if (ViewBag.Participante != null)
+            @if (ViewBag.Correo != null)
             {
-                <p>@ViewBag.Participante.correo</p>
+                <p>@ViewBag.Correo</p>
             }
         </div>
         <div class="card-footer text-muted">
