Imágenes del sitio habilitadas.

--- a/webMetics/Views/Login/Login.cshtml
+++ b/webMetics/Views/Login/Login.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body id="body-login" style=" background-image: url('../../Imagenes/fondo_login.jpg')">
+<body id="body-login" style=" background-image: url('/images/fondo_login.jpg')">
     <div class="container justify-content-center">
         <div class="container justify-content-center">
             <div class="text-center container-cards" style="width:50%">
