--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -18,9 +18,9 @@
 </head>
 <body>
     <div class="logos_wrapper" style="background-color: #44beef ">
-        <a href="https://www.ucr.ac.cr/"> <img src="~/Imagenes/logoUCR.png" style="width: 10%; margin-right: 1%;" alt="Logo Universidad de Costa Rica" /> </a>
-        <a href="https://metics.ucr.ac.cr/es/"> <img src="~/Imagenes/logoMETICS.png" style="width: 15%; margin-right: 1%;" alt="Logo METICS" /> </a>
-        <a href="https://metics.ucr.ac.cr/es/"> <img src="~/Imagenes/logosVC.png" style="width: 8%; margin-right: 1%;" alt="Logo Vicerrectoria de Docencia" /> </a>
+        <a href="https://www.ucr.ac.cr/"> <img src="~/images/logoUCR.png" style="width: 10%; margin-right: 1%;" alt="Logo Universidad de Costa Rica" /> </a>
+        <a href="https://metics.ucr.ac.cr/es/"> <img src="~/images/logoMETICS.png" style="width: 15%; margin-right: 1%;" alt="Logo METICS" /> </a>
+        <a href="https://metics.ucr.ac.cr/es/"> <img src="~/images/logosVC.png" style="width: 8%; margin-right: 1%;" alt="Logo Vicerrectoria de Docencia" /> </a>
     </div>
 
     <style>
