Botones de redireccionamiento.

--- a/webMetics/Views/Login/GestionarContrasena.cshtml
+++ b/webMetics/Views/Login/GestionarContrasena.cshtml
@@ -60,9 +60,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row justify-content-center m-4 mb-0">
-                            @Html.ActionLink("Cancelar", "../Home/Index", new { }, new { @class = "btn boton-formularios", @style = "background-color:grey" })
-                            <input type="submit" class="btn btn-primary boton-formularios" value="Guardar" />
+                        <div class="row justify-content-center m-4">
+                            <div class="col-auto">
+                                @Html.ActionLink("Cancelar", "ListaGruposDisponibles", "Grupo", new { }, new { @class = "btn btn-secondary btn-block", @style = "background-color:grey" })
+                            </div>
+                            <div class="col-auto">
+                                <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
+                            </div>
                         </div>
                     </div>
                 </div>
