--- a/webMetics/Views/Grupo/EditarAdjunto.cshtml
+++ b/webMetics/Views/Grupo/EditarAdjunto.cshtml
@@ -40,9 +40,13 @@
                             </div>
                             @Html.HiddenFor(grupoModel => grupoModel.idGrupo)
                         </div>
-                        <div class="row justify-content-center" style="margin-top:20px">
-                            @Html.ActionLink("Cancelar", "ListaGruposDisponibles", new { }, new { @class = "btn boton-formularios", @style = "background-color:grey" })
-                            <input type="submit" class="btn btn-primary boton-formularios" value="Guardar" />
+                        <div class="row justify-content-center m-4">
+                            <div class="col-auto">
+                                @Html.ActionLink("Cancelar", "ListaGruposDisponibles", "Grupo", new { }, new { @class = "btn btn-secondary btn-block", @style = "background-color:grey" })
+                            </div>
+                            <div class="col-auto">
+                                <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
+                            </div>
                         </div>
                     </div>
                 </div>
