--- a/webMetics/Views/Login/CrearUsuario.cshtml
+++ b/webMetics/Views/Login/CrearUsuario.cshtml
@@ -61,8 +61,12 @@
                         </div>
                     </div>
                     <div class="row justify-content-center m-4">
-                        @Html.ActionLink("Cancelar", "Login", "Login", new { }, new { @class = "btn boton-formularios", @style = "background-color:grey" })
-                        <input type="submit" class="btn btn-primary boton-formularios" value="Guardar">
+                        <div class="col-auto">
+                            @Html.ActionLink("Cancelar", "Login", "Login", new { }, new { @class = "btn btn-secondary btn-block", @style = "background-color:grey" })
+                        </div>
+                        <div class="col-auto">
+                            <input type="submit" class="btn btn-primary btn-block" value="Guardar"/>
+                        </div>
                     </div>
                 </div>
             </div>
