--- a/webMetics/Views/Participante/EditarParticipante.cshtml
+++ b/webMetics/Views/Participante/EditarParticipante.cshtml
@@ -108,9 +108,13 @@
                                 @Html.ValidationMessageFor(participanteModel => participanteModel.condicion, "", new { @class = "text-danger" })
                             </div>
                         </div>
-                        <div class="row justify-content-center m-4 mb-0">
-                            @Html.ActionLink("Cancelar", "../Home/Index", new { }, new { @class = "btn boton-formularios", @style = "background-color:grey" })
-                            <input type="submit" class="btn btn-primary boton-formularios" value="Guardar" />
+                        <div class="row justify-content-center m-4">
+                            <div class="col-auto">
+                                @Html.ActionLink("Cancelar", "Index", "Home", new { }, new { @class = "btn btn-secondary btn-block", @style = "background-color:grey" })
+                            </div>
+                            <div class="col-auto">
+                                <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
+                            </div>
                         </div>
                     </div>
                 </div>
