--- a/webMetics/Views/Categoria/EditarCategoria.cshtml
+++ b/webMetics/Views/Categoria/EditarCategoria.cshtml
@@ -72,7 +72,7 @@
     }
     else
     {
-        Html.RenderPartial("~/Views/Login/Login.cshtml");    
+        await Html.RenderPartialAsync("~/Views/Login/Login.cshtml");
     }
     </body>
 </html>
