--- a/webMetics/Views/Grupo/AgregarGrupo.cshtml
+++ b/webMetics/Views/Grupo/AgregarGrupo.cshtml
@@ -145,7 +145,7 @@
     }
     else
     {
-        Html.RenderPartial("~/Views/Login/Login.cshtml");
+        await Html.RenderPartialAsync("~/Views/Login/Login.cshtml");
     }
 </body>
 </html>
