--- a/webMetics/Views/TipoActividad/CrearTipoActividad.cshtml
+++ b/webMetics/Views/TipoActividad/CrearTipoActividad.cshtml
@@ -66,7 +66,7 @@
     }
     else
     {
-        Html.RenderPartial("~/Views/Login/Login.cshtml");
+        await Html.RenderPartialAsync("~/Views/Login/Login.cshtml");
     }
 
 </body>
